[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Buildings/Warehouse/warehouse_roof.png" type="Texture" id=1]
[ext_resource path="res://Entities/Buildings/Warehouse/warehouse_interior.png" type="Texture" id=2]
[ext_resource path="res://Entities/Buildings/Warehouse/Warehouse.gd" type="Script" id=3]
[ext_resource path="res://Entities/Buildings/Warehouse/warehouse_interior_level2.png" type="Texture" id=4]
[ext_resource path="res://Entities/Objects/QuestItems/packed_meal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/NPCs/SHDealer/SHDealer.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55.1458, 54.2074 )

[node name="Warehouse" type="Node2D"]
script = ExtResource( 3 )

[node name="Interior" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Interior"]
position = Vector2( 0, 2.878 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Interior/StaticBody2D"]
polygon = PoolVector2Array( 17.8803, 11.9112, -57.8685, 11.4692, -57.76, 9.84762, 17.75, 10.0836 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Interior/StaticBody2D"]
position = Vector2( 91.5558, -0.196728 )
polygon = PoolVector2Array( -41.7674, 12.0195, -57.3237, 11.8427, -57.3237, 10.075, -41.454, 10.0671 )

[node name="Wall2" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 4 )

[node name="Roof" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 1 )

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall"]
position = Vector2( 0.393463, 0 )
polygon = PoolVector2Array( -29.7401, 50.8755, -62.7453, 50.8755, -62.729, 42.5526, -65.951, 42.5546, -65.951, -65.9863, 57.2533, -66.1817, 57.2622, 43.2617, 53.3605, 43.6728, 53.3731, 50.5095, -12.7964, 50.6431, -13.5393, 42.0653, 49.5769, 41.878, 49.8129, -63.2678, -58.3949, -63.2845, -58.4885, 41.9716, -29.5525, 42.0653 )

[node name="RoofHiding" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoofHiding"]
position = Vector2( -3.95671, -9.21447 )
shape = SubResource( 1 )

[node name="packed_meal" parent="." instance=ExtResource( 5 )]
position = Vector2( -49.3867, -45.4859 )

[node name="packed_meal2" parent="." instance=ExtResource( 5 )]
position = Vector2( -33.7023, -45.4859 )

[node name="packed_meal3" parent="." instance=ExtResource( 5 )]
position = Vector2( -42.3788, -40.1465 )

[node name="packed_meal4" parent="." instance=ExtResource( 5 )]
position = Vector2( 42.0499, -46.487 )

[node name="packed_meal5" parent="." instance=ExtResource( 5 )]
position = Vector2( 22.361, -48.9898 )

[node name="packed_meal6" parent="." instance=ExtResource( 5 )]
position = Vector2( 14.8525, -49.4904 )

[node name="packed_meal7" parent="." instance=ExtResource( 5 )]
position = Vector2( 5.1749, -47.655 )

[node name="packed_meal8" parent="." instance=ExtResource( 5 )]
position = Vector2( 16.1873, -44.3179 )

[node name="packed_meal9" parent="." instance=ExtResource( 5 )]
position = Vector2( -49.3867, 1.4004 )

[node name="packed_meal10" parent="." instance=ExtResource( 5 )]
position = Vector2( -47.5513, -5.44065 )

[node name="packed_meal11" parent="." instance=ExtResource( 5 )]
position = Vector2( -33.2018, 3.56952 )

[node name="packed_meal12" parent="." instance=ExtResource( 5 )]
position = Vector2( -3.66842, 3.56952 )

[node name="SHDealer" parent="." instance=ExtResource( 6 )]
position = Vector2( -1.95802, 56.313 )

[connection signal="body_entered" from="RoofHiding" to="." method="_on_RoofHiding_body_entered"]
[connection signal="body_exited" from="RoofHiding" to="." method="_on_RoofHiding_body_exited"]
